--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>English Vocabulary Practice (V4.1)</title> 
-    <link rel="stylesheet" href="style.css">
+    <title>English Vocabulary Practice</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -18,10 +18,10 @@
         </div>
 
         <div id="review-display" class="display-area">
-             <span id="word-text"></span>
-             <span id="word-syllables"></span>
-             <span id="word-pronunciation"></span>
-             <span id="word-meaning-review" style="display: none;"></span>
+            <span id="word-text"></span>
+            <span id="word-syllables"></span>
+            <span id="word-pronunciation"></span>
+            <span id="word-meaning-review" style="display: none;"></span>
         </div>
         <div id="prompt-display" class="display-area"></div>
 
@@ -31,9 +31,9 @@
         <div id="attempt-counter"></div>
 
         <div id="action-buttons">
-             <button id="speak-button">Speak Again</button>
-             <button id="check-button">Check</button>
-             <button id="next-word-button" style="display: none;">Next Word</button>
+            <button id="speak-button">Speak Again</button>
+            <button id="check-button">Check</button>
+            <button id="next-word-button" style="display: none;">Next Word</button>
         </div>
 
         <div id="feedback"></div>
@@ -44,9 +44,9 @@
         </div>
 
         <div id="progress"></div>
-
     </div>
 
+    <script src="words.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
