--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Vocabulary Practice</h1>
+        <h1>Vocabulary Practice 3</h1>
 
         <div class="mode-selection">
             <label>Select Mode:</label>
