--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>English Vocabulary Practice 3</title>
+    <title>English Vocabulary Practice</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Vocabulary Practice 3</h1>
+        <h1>Vocabulary Practice</h1>
 
         <div class="mode-selection">
             <label>Select Mode:</label>
