--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>English Vocabulary Practice</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
 </head>
 <body>
     <div class="container">
@@ -46,7 +47,6 @@
         <div id="progress"></div>
     </div>
 
-    <script src="words.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
