spported to multiple levels for HF phrase

--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>English Vocabulary Practice</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="favicon.svg" type="image/svg+xml">
 </head>
 <body>
     <div class="container">
         <h1>Vocabulary Practice</h1>
+
+        <div class="level-selection">
+            <label for="level-selector">Select Level:</label>
+            <select id="level-selector">
+                <option value="C">Level HFC</option>
+                <option value="D">Level HFD</option>
+                <option value="E">Level HFE</option>
+                <option value="F">Level HFF</option>
+                <option value="G">Level HFG</option>
+                <option value="H">Level HFH</option>
+                <option value="J">Level HFI-J</option>
+            </select>
+        </div>
 
         <div class="mode-selection">
             <label>Select Mode:</label>
