--- a/speech_test.html
+++ b/speech_test.html
@@ -20,8 +20,8 @@
     function speakText() {
       const text = document.getElementById('text').value;
       const utterance = new SpeechSynthesisUtterance(text);
-
-      /*
+      voices = window.speechSynthesis.getVoices();
+      //*
       // 选择适合的语音
       if (/[\u4e00-\u9fa5]/.test(text)) {
         // 中文
