--- a/index.html
+++ b/index.html
@@ -10,31 +10,30 @@
     <div class="container">
         <h1>Vocabulary Practice</h1>
 
-        <div class="level-selection">
-            <label for="level-selector">Select Level:</label>
-            <select id="level-selector">
-                <option value="C">Level HFC</option>
-                <option value="D">Level HFD</option>
-                <option value="E">Level HFE</option>
-                <option value="F">Level HFF</option>
-                <option value="G">Level HFG</option>
-                <option value="H">Level HFH</option>
-                <option value="J">Level HFI-J</option>
-            </select>
-        </div>
-
-        <div class="mode-selection">
-            <label>Select Mode:</label>
-            <label><input type="radio" name="mode" value="review" checked> Review</label>
-            <label><input type="radio" name="mode" value="dictation"> Dictation (IPA -> Word)</label>
-            <label><input type="radio" name="mode" value="listening"> Listening (Audio -> Word)</label>
+        <div class="controls">
+            <span>HFLevel:</span>
+            <button class="level-button" data-level="C">C</button>
+            <button class="level-button" data-level="D">D</button>
+            <button class="level-button" data-level="E">E</button>
+            <button class="level-button" data-level="F">F</button>
+            <button class="level-button" data-level="G">G</button>
+            <button class="level-button" data-level="H">H</button>
+            <button class="level-button" data-level="J">J</button>
+            <span>Mode:</span>
+            <button class="mode-button" data-mode="review">Review</button>
+            <button class="mode-button" data-mode="dictation">Dictation</button>
+            <button class="mode-button" data-mode="listening">Listening</button>
+            <label class="shuffle-toggle">
+                <input type="checkbox" id="shuffle-toggle">
+                <span>Shuffling</span>
+            </label>
         </div>
 
         <div id="review-display" class="display-area">
-            <span id="word-text"></span>
-            <span id="word-syllables"></span>
-            <span id="word-pronunciation"></span>
-            <span id="word-meaning-review" style="display: none;"></span>
+            <div id="word-text" class="word-text"></div>
+            <div id="word-syllables" class="word-syllables"></div>
+            <div id="word-pronunciation" class="word-pronunciation"></div>
+            <div id="word-meaning-review" class="word-meaning" style="display: none;"></div>
         </div>
         <div id="prompt-display" class="display-area"></div>
         <!--
@@ -46,11 +45,11 @@
         <div id="attempt-counter"></div>
 
         <div id="action-buttons">
-            <button id="speak-button">Speak Again</button>
-            <button id="check-button">Check</button>
-            <button id="next-word-button" style="display: none;">Next Word</button>
+            <button id="speak-button" class="speak-button">Speak Again</button>
+            <button id="check-button" class="check-button">Check</button>
+            <button id="next-word-button" class="next-button" style="display: none;">Next Word</button>
         </div>
-       
+
         <div id="result">
             <p id="correct-word"></p>
             <p id="meaning"></p>
@@ -59,6 +58,7 @@
         <div id="progress"></div>
     </div>
 
-    <script src="script.js"></script>
+    <!-- Load the main application script as a module -->
+    <script type="module" src="js/app.js"></script>
 </body>
 </html>
